--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.24.0",
     "formik": "^2.2.9",
+    "history": "^5.1.0",
     "react": "^17.0.2",
     "react-datepicker": "^4.3.0",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
     "react-router-dom": "^5.3.0",
+    "react-router-redux": "^4.0.8",
     "react-scripts": "4.0.3",
     "react-select": "^5.2.1",
+    "redux-saga": "^1.1.3",
     "styled-components": "^5.3.3",
     "web-vitals": "^1.0.1",
     "yup": "^0.32.11"
