--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "react-select": "^5.2.1",
+    "react-toastify": "^8.1.0",
     "redux-saga": "^1.1.3",
     "styled-components": "^5.3.3",
     "typescript": "^4.1.2",
