--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/history": "^4.7.9",
     "@types/jest": "^26.0.15",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
@@ -15,7 +16,9 @@
     "@types/redux-mock-store": "^1.0.3",
     "@types/styled-components": "^5.1.16",
     "axios": "^0.24.0",
+    "connected-react-router": "^6.9.2",
     "formik": "^2.2.9",
+    "history": "^4.10.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
