task-7: add delete appointment functionality for doctor, refactor

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-onclickoutside": "^6.7.4",
     "@types/react-router-dom": "^5.3.2",
     "@types/redux-mock-store": "^1.0.3",
     "@types/styled-components": "^5.1.16",
@@ -21,6 +22,7 @@
     "history": "^4.10.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-onclickoutside": "^6.12.1",
     "react-redux": "^7.2.6",
     "react-router": "^5.2.1",
     "react-router-dom": "^5.3.0",
