--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/styled-components": "^5.1.16",
     "axios": "^0.24.0",
     "connected-react-router": "^6.9.2",
+    "date-fns": "^2.27.0",
     "formik": "^2.2.9",
     "history": "^4.10.1",
     "react": "^17.0.2",
