--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "history": "^4.10.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-loading-skeleton": "^3.0.1",
     "react-onclickoutside": "^6.12.1",
     "react-redux": "^7.2.6",
     "react-router": "^5.2.1",
